# OpenDMS

./: .gitignore  .pre-commit-config.yaml  QUICKSTART.md  README.md  SYSTEM_NOTES.md  docker-compose.yml  env.example  pyproject.toml  setup.sh
docker/: Dockerfile
mdmsga/: __init__.py  main.py
mdmsga/api/v1/: api.py
mdmsga/api/v1/endpoints/: auth.py
mdmsga/core/: config.py  database.py  security.py
mdmsga/models/: __init__.py  customer.py  dealership.py  inventory.py  sale.py  service.py  user.py
mdmsga/schemas/: __init__.py  auth.py  user.py
mdmsga/static/: manifest.json  sw.js
mdmsga/static/css/: app.css
mdmsga/templates/: base.html  dashboard.html  inventory.html  offline.html
mdmsga/templates/auth/: login.html
opendms/: __init__.py  main.py
opendms/api/v1/: api.py
opendms/api/v1/endpoints/: auth.py  customer.py  dealership.py  inventory.py  sale.py  service.py  user.py
opendms/core/: config.py  database.py  security.py
opendms/crud/: __init__.py  user.py
opendms/models/: __init__.py  customer.py  dealership.py  inventory.py  sale.py  service.py  user.py
opendms/schemas/: __init__.py  auth.py  customer.py  dealership.py  inventory.py  sale.py  service.py  user.py
opendms/static/: manifest.json  sw.js
opendms/static/css/: app.css
opendms/templates/: base.html  dashboard.html  inventory.html  offline.html
opendms/templates/auth/: login.html
xdms/: __init__.py  main.py
xdms/api/v1/: api.py
xdms/api/v1/endpoints/: auth.py
xdms/core/: config.py  database.py  security.py
xdms/models/: __init__.py  customer.py  dealership.py  inventory.py  sale.py  service.py  user.py
xdms/schemas/: __init__.py  auth.py  user.py
xdms/static/: manifest.json  sw.js
xdms/static/css/: app.css
xdms/templates/: base.html  dashboard.html  inventory.html  offline.html
xdms/templates/auth/: login.html
